[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipher-layer-k"
version = "0.1.0"
description = "Layer K — autonomous Solana trading scaffold (paper-trade only) for CIPHER signal engine."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "cryptomotifs" }]
requires-python = ">=3.11"
keywords = ["solana", "trading", "paper-trade", "jupiter", "jito", "cipher"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "solders>=0.23,<0.30",
    "requests>=2.31,<3",
    "cryptography>=42,<47",
    "base58>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5",
    "ruff>=0.6,<1.0",
]

[project.urls]
Homepage = "https://github.com/cryptomotifs/cipher-layer-k"
SignalEngine = "https://github.com/cryptomotifs/cipher-signal-engine"
CipherX402 = "https://cipher-x402.vercel.app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "B", "UP", "S", "C4", "SIM", "RET", "PL",
]
ignore = [
    "S101",    # allow asserts (pytest)
    "PLR2004", # magic numbers ok in tests
    "PLR0913", # many args in fn signatures
    "PLR0911", # many returns ok in executor flow
    "S603",    # subprocess call — justified by tx_signer
    "S311",    # non-crypto random ok for tip account pick
    "S107",    # "env var name" default strings are not passwords
    "N818",    # we prefer -Exceeded / -Tripped / -NotAllowed over -Error
    "E501",    # soft line-length (still enforced at 100 for new code)
    "SIM103",  # direct-return micro-refactor — keep the explicit form
    "SIM105",  # contextlib.suppress churn — keep try/except for clarity
    "UP035",   # collections.abc vs typing.Callable churn
    "UP037",   # keep string forward-refs when they help
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR", "N806"]
